abstract class Widget {}

abstract class RenderObjectWidget extends Widget {}

abstract class SingleChildRenderObjectWidget extends RenderObjectWidget {}

abstract class MultiChildRenderObjectWidget extends RenderObjectWidget {}